<resources>
    <string name="app_title">ePOS2 Printer</string>
    <string name="btn_discovery">Discovery</string>
    <string name="title_target">Target</string>
    <string name="title_printerseries">Printer Series</string>
    <string name="title_lang">Lang</string>
    <string name="title_drawer">Drawer</string>
    <string name="btn_samplereceipt">Sample Receipt</string>
    <string name="btn_samplecoupon">Sample Coupon</string>
    <string name="btn_monitor">Status Monitoring</string>
    <string name="btn_restart">Restart</string>
    <string name="btn_setting">Setting</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="title_printerlist">Printer List</string>
    <string name="default_target">TCP:192.168.192.168</string>
    <string name="title_warnings">Printer Warnings</string>
    <string name="print_job_id">ABC123</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="printerseries_m10">TM-m10 Series</string>
    <string name="printerseries_m30">TM-m30 Series</string>
    <string name="printerseries_p20">TM-P20 Series</string>
    <string name="printerseries_p60">TM-P60 Series</string>
    <string name="printerseries_p60ii">TM-P60II Series</string>
    <string name="printerseries_p80">TM-P80 Series</string>
    <string name="printerseries_t20">TM-T20 Series</string>
    <string name="printerseries_t60">TM-T60 Series</string>
    <string name="printerseries_t70">TM-T70 Series</string>
    <string name="printerseries_t81">TM-T81 Series</string>
    <string name="printerseries_t82">TM-T82 Series</string>
    <string name="printerseries_t83">TM-T83 Series</string>
    <string name="printerseries_t83iii">TM-T83III Series</string>
    <string name="printerseries_t88">TM-T88 Series</string>
    <string name="printerseries_t90">TM-T90 Series</string>
    <string name="printerseries_t90kp">TM-T90KP Series</string>
    <string name="printerseries_t100">TM-T100 Series</string>
    <string name="printerseries_u220">TM-U220 Series</string>
    <string name="printerseries_u330">TM-U330 Series</string>
    <string name="printerseries_l90">TM-L90 Series</string>
    <string name="printerseries_h6000">TM-H6000 Series</string>
    <string name="printerseries_m30ii">TM-m30II Series</string>
    <string name="printSpeed_1">1</string>
    <string name="printSpeed_2">2</string>
    <string name="printSpeed_3">3</string>
    <string name="printSpeed_4">4</string>
    <string name="printSpeed_5">5</string>
    <string name="printSpeed_6">6</string>
    <string name="printSpeed_7">7</string>
    <string name="printSpeed_8">8</string>
    <string name="printSpeed_9">9</string>
    <string name="printSpeed_10">10</string>
    <string name="printSpeed_11">11</string>
    <string name="printSpeed_12">12</string>
    <string name="printSpeed_13">13</string>
    <string name="printSpeed_14">14</string>
    <string name="printDensity_DIP">DIP</string>
    <string name="printDensity_70">70%</string>
    <string name="printDensity_75">75%</string>
    <string name="printDensity_80">80%</string>
    <string name="printDensity_85">85%</string>
    <string name="printDensity_90">90%</string>
    <string name="printDensity_95">95%</string>
    <string name="printDensity_100">100%</string>
    <string name="printDensity_105">105%</string>
    <string name="printDensity_110">110%</string>
    <string name="printDensity_115">115%</string>
    <string name="printDensity_120">120%</string>
    <string name="printDensity_125">125%</string>
    <string name="printDensity_130">130%</string>
    <string name="paperWidth_58">58mm</string>
    <string name="paperWidth_60">60mm</string>
    <string name="paperWidth_80">80mm</string>
    <string name="lang_ank">ANK</string>
    <string name="lang_japanese">JAPANESE</string>
    <string name="lang_chinese">CHINESE</string>
    <string name="lang_taiwan">TAIWAN</string>
    <string name="lang_korean">KOREAN</string>
    <string name="lang_thai">THAI</string>
    <string name="lang_southasia">SOUTH ASIA</string>
    <string name="action_settings">Settings</string>
    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>


    <!-- Setting-->
    <string name="btn_maintenance_counter_and_printer_setting">Maintenance Counter &amp; Printer Setting</string>
    <string name="btn_firmware_update">Firmware Update</string>
    <string name="progress_msg">Please wait...</string>
    <string name="error_msg">Unexpected Error Occurred.\nStart Over Again.</string>
    <string name="error_msg_firm_update">Setting API do not support POS terminal model</string>
    <string name="note1_1">The time required to update depends on the interface.</string>
    <string name="note1_2">About 15 minutes for a network connection</string>
    <string name="note1_3">About 85 minutes for a Bluetooth connection</string>
    <string name="note2">You cannot stop the update once it has started.</string>
    <string name="note3">Check that the smart device is charged sufficiently.</string>
    <string name="note4">Check that no errors have occurred in the printer.</string>
    <string name="note5">Check that the printer\'s communication status is in good condition.</string>
    <string name="note6">Do not operate the smart device while updating the firmware.</string>
    <string name="note7">Do not turn off the printer while updating the firmware.</string>
    <string name="note8">Do not disconnect the connection cable and power cable while updating the firmware.</string>
    <string name="note9">Do not sleep the smart device while updating the firmware.</string>
    <string name="reconnect_message">Reconnecting Printer.</string>
    <string name="verify_message">Verify Firmware version.</string>
    <string name="title_firmware_update">Firmware Update</string>
    <string name="title_current_firmware">Current Firmware</string>
    <string name="title_target_firmware">Target Firmware</string>
    <string name="title_printer_model">Printer Model</string>
    <string name="title_option">Option</string>
    <string name="title_firmware_list">Firmware List</string>
    <string name="btn_get_printer_firmware">Get Printer Firmware</string>
    <string name="btn_download_firmware_list">Download Firmware List</string>
    <string name="btn_update_firmware">Update Firmware</string>
    <string name="default_printerModel">TM-m30</string>
    <string name="default_option">-A</string>

    <!-- Monitor-->
    <string name="btn_single_monitor">Status Monitoring for single tablet</string>
    <string name="btn_multiple_monitor">Status Monitoring for multiple tablets</string>
    <string name="btn_start_monitor">startMonitor</string>
    <string name="btn_stop_monitor">stopMonitor</string>
    <string name="title_status">status</string>

    title_monitor_note
    <string name="title_monitor_note">This monitor method keep calling the getStatus API. This method is available for TCP.</string>
    <string name="btn_start_getstatus">Start</string>
    <string name="btn_stop_getstatus">Stop</string>


    <!-- My Strings-->
    <string name="app_name">PADA Queue App</string>

    <string name="please_enter_your_mobile_number_en">Please enter your mobile number</string>
    <string name="i_dont_have_a_number">I Don\'t Have a Number</string>
    <string name="proceed_en">Proceed</string>
    <string name="mobile_number_cannot_start_with">Mobile Number Cannot start with </string>

    <string name="please_enter_your_mobile_number_ar">يرجى ادخال رقم الهاتف</string>
    <string name="proceed_ar">الإستمرار</string>
    <string name="incorrect_number">Number is not Correct!!!</string>
    <string name="setting_activity">Setting Activity</string>


    <!--setting activity-->
    <string name="configure_printer">Configure Printer</string>
    <string name="choose_a_branch">Choose a branch </string>


    <!--error activity-->
    <string name="go_back">GO BACK</string>
    <string name="error">ERROR</string>
    <string name="branch_is_closed">Branch is closed!! Please visit the branch any other time Thank You!!!</string>
    <string name="no_branch_information">No Information Available for Branch</string>
    <string name="choose_a_branch_admin">Choose a Branch!! Please contact to Administrator</string>
    <string name="server_error_admin">Error getting Data from Server!! Please contact to Administrator</string>
    <string name="internet_error_admin">No Internet Connection!! Please contact to Administrator</string>

    <!--service activity-->
    <string name="what_whould_you">What would you like to do?</string>
    <string name="i_am_in_special_need">I\'m with special needs</string>
    <string name="no_data_to_display">No data to display</string>


</resources>
