<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmain"
    android:layoutDirection="ltr"
    android:keepScreenOn="true"
    tools:context="com.epson.epos2_printer.ui.ServiceActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/mTextBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="@string/go_back"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/mBack"
        app:layout_constraintStart_toStartOf="@+id/mBack"
        app:layout_constraintTop_toBottomOf="@+id/mBack" />

    <TextView
        android:id="@+id/mTextQuestion"
        style="@style/TextAppearance.MyApp.Headline6"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_whould_you"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mTextBack" />


    <TextView
        android:id="@+id/mWithSpecialNeed"
        style="@style/TextAppearance.MyApp.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/i_am_in_special_need"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mTextQuestion" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/mSpecialNeedRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/check_box_selector"
        android:button="@null"
        android:buttonTint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/mWithSpecialNeed"
        app:layout_constraintEnd_toStartOf="@id/mWithSpecialNeed"
        app:layout_constraintTop_toTopOf="@id/mWithSpecialNeed"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/mBack"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="?attr/actionBarItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_go_back" />


    <TextView
        android:id="@+id/mTextN0Data"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/no_data_to_display"
        android:textColor="@color/darkgrey"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mWithSpecialNeed" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mSpecialNeedRadio" />

</androidx.constraintlayout.widget.ConstraintLayout>


<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mProgressBarMain"
    android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp" />



    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:id="@+id/mTransparent"
        android:background="@color/black"
        android:alpha="0.3"
        android:src="@color/black"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>